kubernetes/projects/apps/radarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr
  namespace: jellyfin
spec:
  selector:
    app: radarr
  ports:
  - port: 80
    targetPort: 7878
